--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -6,7 +6,7 @@ section {
   flex-direction: column;
   justify-content: flex-start;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgb(172, 172, 172);
 }
 
 form {
