--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,7 +4,16 @@
   align-items: "center";
   height: "90vh";
 }
-.container {
+.bodyContainer {
+  background-color: rgb(172, 172, 172);
+  padding: 15px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  min-height: 84vh;
+  justify-content: space-between;
+}
+
+.list {
+  align-items: center;
 }
